# streamlit-test-custom-component-wheel

./: main.py  pyproject.toml
custom_components/: streamlit_discrete_slider-0.0.1-py3-none-any.whl
